<resources>
    <string name="app_name">MyBank</string>
    <string name="sign_in">Sign In</string>
    <string name="roziman">Я согласен со всеми условиями.</string>
    <string name="login">Политика конфиденциалности сервиса</string>
    <string name="content">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="register_btn">Регистрация</string>
    <string name="zabil_parol">Забильий пароль!</string>
    <string name="login1">Login</string>
    <string name="verify_code">Код отправлен на номер %s</string>
</resources>