<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/black"
        android:src="@drawable/splash_logo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:textSize="16sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roziman"
        android:textColor="#3862F8"
        android:padding="5dp"
        android:button="@drawable/custom_checkbox"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAccept"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Qabul qildim"
            android:layout_marginHorizontal="3dp"
            android:layout_marginVertical="3dp"
            android:textColor="@color/white"
            android:enabled="false"
            android:background="@drawable/qabul_qildim_button01"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

</LinearLayout>