<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textColor="@color/black"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="Phone Number"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:endIconMode="clear_text"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_marginHorizontal="15dp"
        android:outlineAmbientShadowColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="+998906601314"

            android:background="@drawable/edit_text_background"
            android:inputType="phone"
            android:textColor="@color/headerColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="password"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:endIconMode="password_toggle"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_marginHorizontal="15dp"
        android:outlineAmbientShadowColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            android:textColor="@color/headerColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/zabil_parol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/zabil_parol"
        android:textColor="#3862F8"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        android:layout_height="70dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login1"
            android:layout_marginHorizontal="3dp"
            android:layout_marginVertical="3dp"
            android:textColor="@color/black"
            android:enabled="false"
            android:background="@drawable/qabul_qildim_button01"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        android:layout_height="70dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/register_btn"
            android:layout_marginHorizontal="3dp"
            android:layout_marginVertical="3dp"
            android:enabled="true"
            android:background="@drawable/qabul_qildim_button01"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

</LinearLayout>